--- a/app/views/reservations/_step2.html.erb
+++ b/app/views/reservations/_step2.html.erb
@@ -28,7 +28,7 @@
                             data: {
                               controller: "flatpickr",
                               flatpickr_date_format: "d-m-Y",
-                              flatpickr_min_date: Time.zone.now
+                              flatpickr_max_date: Time.zone.now
                             },
                             class: "form-control read-only-white",
                             placeholder: "Chọn sinh nhật"%>
