--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -18,7 +18,7 @@
   <% room = Room.find(reservation.room_id) %>
   <%  room_name = room.name %>
   <%  price = RoomPrice.find(RoomType.find(Room.find(reservation.room_id).id).id).price %>
-  <% room_status = @room_statuses[room.status][:text] %>
+  <% room_status = @room_statuses[room.status - 1][:text] %>
 
   <% client_name = reservation.client_name %>
 
