--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -55,7 +55,7 @@
       <%= form.label :address, "Địa chỉ" %>
     </div>
     <div class="_form_item_input">
-
+    <%= form.text_field :phone_number %>
     </div>
   </div>
   
