--- a/app/assets/stylesheets/room_types.scss
+++ b/app/assets/stylesheets/room_types.scss
@@ -11,11 +11,13 @@
 
 .title{
     margin-bottom: 40px;
-    color: #6749b9;
+    color: #FFBD4A;
+    text-shadow: 2px 0 0 #07153a, -2px 0 0 #07153a, 0 2px 0 #07153a, 0 -2px 0 #07153a, 1px 1px #07153a, -1px -1px 0 #07153a, 1px -1px 0 #07153a, -1px 1px 0 #07153a;
 }
 .tColumn{
     display: flex;
     flex-direction: column;
+    
 }
 .tRow{
     display: flex;
@@ -34,13 +36,14 @@
 }
 
 .roomtype_list_container{
-    color: #000000;
+    color: #ffffff;
     font-size: 17px;
     max-width: 800px;
     .item{
         padding: 0px 10px 0px 10px;
         margin: 5px 10px 5px 10px;
-        border: solid 3px black;
+        border: solid 3px #07153a;
+        background-color: #07153a;
         justify-content: space-between;
         // background-color: #FFFF93;
         & > div{
@@ -60,9 +63,8 @@
     }
     i{
         font-size: 2.2rem;
-        color: #866ec7;
+        color: #FFBD4A;
         &:hover{
-            color: #6749b9;
         }
     }
 }
@@ -119,8 +121,8 @@
     }
 }
 .button_back{
-    background-color: #ffffff;
-    border: solid 1px #866ec7;
+    background-color: #FEF8F2;
+    border: solid 1px #07153a;
     border-radius: 4px;
     font-size: 16px;
     padding: 5px 20px;
@@ -128,8 +130,8 @@
 
 .button_show,
 .button_edit{
-    background-color: 	#ece6ff;
-    border: solid 1px #866ec7;
+    background-color: 	#FFBD4A;
+    border: solid 2px #07153a;
     border-radius: 4px;
     font-size: 16px;
     padding: 5px 20px;
