--- a/app/views/reservations/_step1.html.erb
+++ b/app/views/reservations/_step1.html.erb
@@ -12,7 +12,7 @@
     <div class="row">
       <p class="col-lg-3">Phòng</p>
       <div class="col-lg-7 form-group">
-        <%= form.label @room_name, class:"form-control", readonly:true %>
+        <%= form.collection_select :room_id, Room.all.order(:id), :id, :name,{include_blank: false}, {class: 'form-select'} %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -29,7 +29,7 @@
                               flatpickr_date_format: "d-m-Y",
                               flatpickr_min_date: Time.zone.now
                             },
-                            class: "form-control read-only-white",
+                            class: "form-select read-only-white",
                             placeholder: "Chọn ngày đến"%>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
@@ -55,7 +55,7 @@
                               flatpickr_date_format: "d-m-Y",
                               flatpickr_min_date: Time.zone.now
                             },
-                            class: "form-control read-only-white",
+                            class: "form-select read-only-white",
                             placeholder: "Chọn ngày đi"%>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
@@ -82,13 +82,13 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Loại đặt phòng</p>
       <div class="col-lg-7 form-group">
-        <%= form.select @reservation_type_chosen, options_for_select(@reservation_type_view), {}, class: "form-control read-only-white" %>
+        <%= form.select @reservation_type_chosen, options_for_select(@reservation_type_view), {}, class: "form-select read-only-white" %>
       </div>
     </div>
   </div>
 </div>
 <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
-<%= form.hidden_field(:room_id, :value => @room_id) %>
+<%#= form.hidden_field(:room_id, :value => @room_id) %>
 <script>
     <% if session[:reservation_params] %>
       <% params = session[:reservation_params] %>
