--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
         if (path === '/service_room') {
             $('#services').addClass('active')
         }
+        if (path === '/order_service') {
+            $('#order_service').addClass('active')
+        }
         if (path === '/individual_reservation') {
             $('#individual').addClass('active')
         }
