Init cooperation reservation view

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -40,7 +40,7 @@
           <% end %>
         </li>
         <li id="cooperate">
-          <%= link_to reservations_path do %>
+          <%= link_to cooperate_reservation_index_path do %>
             <span class="fa fa-users"></span> Khách đoàn
           <% end %>
         </li>
