Adding UI step 1

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -21,8 +21,8 @@
     <div class="bs-stepper">
       <div class="bs-stepper-content">
         <%= render :partial => "step1",  :locals=>{:form=>form} %>
-        <%= render :partial => "step2",  :locals=>{:form=>form} %>
-        <%= render :partial => "step3",  :locals=>{:form=>form} %>
+        <%#= render :partial => "step2",  :locals=>{:form=>form} %>
+        <%#= render :partial => "step3",  :locals=>{:form=>form} %>
       </div>
 
       <br>
