--- a/app/views/cooperate_reservation/_step1.html.erb
+++ b/app/views/cooperate_reservation/_step1.html.erb
@@ -1,106 +1,89 @@
 <div class="row">
-  <div class="col-lg-6 row">
-    <div class="row end-row-md">
-      <p class="col-lg-3">Loại phòng</p>
-      <div class="col-lg-7 form-group">
-        <%= form.label @room_type_name, class:"form-control", readonly:true, id:"room_type" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-      </div>
+  <%= form_with url: "/cooperate_reservation/new", class:"form-group" do |form| %>
+    <div class="dropdown col-md">
+      <%= form.collection_select :room_type_id, RoomType.all, :id, :name,{include_blank: false, selected: params[:room_type_id], prompt: 'Loại phòng'}, {class: 'form-select'}%>
     </div>
-  </div>
-  <div class="col-lg-6 row">
-    <div class="row">
-      <p class="col-lg-3">Phòng</p>
-      <div class="col-lg-7 form-group">
-        <%= form.collection_select :room_id, Room.all.order(:id), :id, :name,{include_blank: false, selected: params[:room_id]}, {class: 'form-select'}%>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-      </div>
+
+    <div class="dropdown col-md">
+      <%= form.text_field :arrival_date,
+                          data: {
+                            controller: "flatpickr",
+                            flatpickr_date_format: "d-m-Y",
+                            flatpickr_min_date: Time.zone.now
+                          },
+                          class: "form-select read-only-white",
+                          placeholder: "Ngày đến"%>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-6 row">
-    <div class="row row end-row-md">
-      <p class="col-lg-3">Ngày đến</p>
-      <div class="col-lg-7 form-group">
-        <%= form.text_field :arrival_date,
-                            data: {
-                              controller: "flatpickr",
-                              flatpickr_date_format: "d-m-Y",
-                              flatpickr_min_date: Time.zone.now
-                            },
-                            class: "form-select read-only-white",
-                            placeholder: "Chọn ngày đến"%>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-6 row">
-    <div class="row row">
-      <p class="col-lg-3">Giá phòng</p>
-      <div class="col-lg-7 form-group">
-        <%= form.label @room_price, class:"form-control", readonly:true, id:"room_price" %>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-6 row">
-    <div class="row end-row-md">
-      <p class="col-lg-3">Ngày đi</p>
-      <div class="col-lg-7 form-group">
-        <%= form.text_field :leave_date,
-                            data: {
-                              controller: "flatpickr",
-                              flatpickr_date_format: "d-m-Y",
-                              flatpickr_min_date: Time.zone.now
-                            },
-                            class: "form-select read-only-white",
-                            placeholder: "Chọn ngày đi"%>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-6 row">
-    <div class="row">
-      <p class="col-lg-3">Người lớn</p>
-      <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
-        <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
-          <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
-        </div>
-        <p class="col-lg-4 padding-left">Trẻ em</p>
-        <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
-          <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
-        </div>
-      </div>
+
+    <div class="dropdown col-md">
+      <%= form.text_field :leave_date,
+                          data: {
+                            controller: "flatpickr",
+                            flatpickr_date_format: "d-m-Y",
+                            flatpickr_min_date: Time.zone.now
+                          },
+                          class: "form-select read-only-white",
+                          placeholder: "Ngày đi"%>
 
     </div>
-  </div>
+
+    <%= form.submit "Tìm kiếm", class: "btn btn-primary col-md-2 " %>
+  <% end %>
 </div>
-<div class="row">
-  <div class="col-lg-6 row">
-    <div class="row end-row-md">
-      <p class="col-lg-3">Loại đặt phòng</p>
-      <div class="col-lg-7 form-group">
-        <%= form.select @reservation_type_chosen, options_for_select(@reservation_type_view), {}, class: "form-select read-only-white" %>
+
+<br>
+<div class="row w-100">
+  <div class="col-lg">
+    <!--    Bảng kết quả tìm kiếm -->
+    <% if @search_result %>
+      <div class="card  p-4">
+        <table class="table card-body">
+          <thead class="thead-dark">
+          <tr>
+            <th scope="col">Loại</th>
+            <th scope="col">Giá</th>
+            <th scope="col">Phòng trống</th>
+            <th scope="col">Người lớn</th>
+            <th scope="col">Trẻ em</th>
+            <th scope="col">Số lượng</th>
+            <th scope="col"></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>@mdo</td>
+            <td>@mdo</td>
+          </tr>
+
+          </tbody>
+        </table>
       </div>
-    </div>
-  </div>
-</div>
-<%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
-<%#= form.hidden_field(:room_id, :value => @room_id) %>
-<script>
-    <% if session[:reservation_params] %>
-    <% params = session[:reservation_params] %>
-    $('#arrival_date').val("<%= params["arrival_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-    $('#leave_date').val("<%= params["leave_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-    $('#adults').val("<%= params["adults"] || 0 %>")
-    $('#children').val("<%= params["children"] || 0 %>")
+
+
     <% end %>
+  </div>
 
-    $("#room_id").change(function (){
-        var theVal = $('#room_id').val();
-        var theURL = '/reservations/new/' + theVal;
-        window.location.href = theURL
-    });
-</script>
+  <!--    Kết quả lựa chọn -->
+  <div class="col-lg  card h-100">
+    <div class="card-body">
+      <h4>Phòng đã chọn</h4>
+      <h5>Deluxe - 700,000VND</h5>
+      <div class="row">
+        <div class="col-lg">
+          7/7/21 - 9/7/21 <br>
+          2 người lớn 1 trẻ em
+        </div>
+        <div class="col-lg">
+          Hello
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+</div>
