--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
         if (path === '/order_service') {
             $('#order_service').addClass('active')
         }
-        if (path === '/individual_reservation') {
+        if (path === '/reservations') {
             $('#individual').addClass('active')
         }
         if (path === '/cooperate_reservation') {
