--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,10 @@
 <% stylesheet_link_tag 'reservations' %>
+<nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to "Lễ Tân", reservations_path %></li>
+    <li class="breadcrumb-item" aria-current="page"><a>Khách lẻ</a></li>
+  </ol>
+</nav>
 <h2 class="d-flex justify-content-center">Danh sách đặt phòng khách lẻ</h2>
 
 <div class="row">
