--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -4,31 +4,36 @@
   </div>
 <% end %>
 
-<center><h1 class="title">NHÂN VIÊN</h1></center>
-
+<!--<center><h1 class="title">NHÂN VIÊN</h1></center>-->
+<div class="d-flex justify-content-start">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to "Cấu hình", employees_path %></li>
+    <li class="breadcrumb-item" aria-current="page"><a>Nhân viên</a></li>
+  </ol>
+</div>
 <div class="roomtype_sum_container tRow">
   <div class="tColumn" >
       Danh sách nhân viên: <%= @employees.ids.count %> nhân viên
   </div>
-  <div class="searchBar tColumn">
-    <div class="tRow">
-      <select id="typeSearch tColumn">
-        <option value="name" selected>Tên</option>
-        <option value="emp_type">Loại nhân viên</option>
-        <option value="phone">Số điện thoại</option>
-        <option value="address">Địa chỉ</option>
-        <option value="gender">Giới tính</option>
-        <option value="nationality">Quốc tịch</option>
-        <option value="city">Thành phố</option>
-        <option value="DOB">Ngày sinh</option>
-        <option value="email">Email</option>
-      </select>
-      <div class="tform-group">
-        <input  aria-label="Search" type="text" class="tform-control tColumn" placeholder="Tìm kiếm...">
-        <span class="fa fa-search tform-control-feedback"></span>
-      </div>
-    </div>
-  </div>
+<!--  <div class="searchBar tColumn">-->
+<!--    <div class="tRow">-->
+<!--      <select id="typeSearch tColumn">-->
+<!--        <option value="name" selected>Tên</option>-->
+<!--        <option value="emp_type">Loại nhân viên</option>-->
+<!--        <option value="phone">Số điện thoại</option>-->
+<!--        <option value="address">Địa chỉ</option>-->
+<!--        <option value="gender">Giới tính</option>-->
+<!--        <option value="nationality">Quốc tịch</option>-->
+<!--        <option value="city">Thành phố</option>-->
+<!--        <option value="DOB">Ngày sinh</option>-->
+<!--        <option value="email">Email</option>-->
+<!--      </select>-->
+<!--      <div class="tform-group">-->
+<!--        <input  aria-label="Search" type="text" class="tform-control tColumn" placeholder="Tìm kiếm...">-->
+<!--        <span class="fa fa-search tform-control-feedback"></span>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="tColumn newIcon e_tooltip">
       <%= link_to new_employee_path do%><i class="fas fa-plus-circle"></i><% end %>
         <span class="tooltiptext">Tạo mới</span>
@@ -51,7 +56,7 @@
                       <%= employee.name %>
                   </div>
                   <div class="employee_type">
-                      <%= employee.employee_type %>
+                      <%= @types[employee.employee_type - 1][:text] %>
                   </div>
               </div>
           </div>
