--- a/app/views/room_prices/index.html.erb
+++ b/app/views/room_prices/index.html.erb
@@ -1,34 +1,39 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Room Prices</h1>
-<%= @a %>
-<table>
-  <thead>
-    <tr>
-      <th>Price</th>
-      <th>Price type</th>
-      <th>Begin date</th>
-      <th>End date</th>
-      <th>Is available</th>
-      <th colspan="3"></th>
-    </tr>
+<div class="d-flex justify-content-start">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to "Cấu hình", room_prices_path %></li>
+    <li class="breadcrumb-item" aria-current="page"><a>Giá phòng</a></li>
+  </ol>
+</div>
+<h1>Giá phòng</h1>
+<table class="table card-body">
+  <thead class="thead-dark">
+  <tr>
+    <th scope="col">Loại phòng</th>
+    <th scope="col">Giá</th>
+    <th scope="col">Loại Giá</th>
+    <th scope="col">Ngày áp dụng</th>
+    <th scope="col">Đang áp dụng</th>
+    <th scope="col" colspan="3"></th>
+  </tr>
   </thead>
-
   <tbody>
-    <% @room_prices.each do |room_price| %>
-      <tr>
-        <td><%= room_price.price %></td>
-        <td><%= room_price.price_type %></td>
-        <td><%= room_price.date %></td>
-        <td><%= room_price.is_available %></td>
-        <td><%= link_to 'Show', room_price %></td>
-        <td><%= link_to 'Edit', edit_room_price_path(room_price) %></td>
-        <td><%= link_to 'Destroy', room_price, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @room_prices.each do |room_price| %>
+    <tr>
+      <td><%= RoomType.find(room_price.room_type_id).name %></td>
+      <td><%= room_price.price %></td>
+      <td><%= room_price.price_type %></td>
+      <td><%= room_price.date %></td>
+      <td><%= room_price.is_available %></td>
+      <td><%= link_to 'Show', room_price %></td>
+      <td><%= link_to 'Edit', edit_room_price_path(room_price) %></td>
+      <td><%= link_to 'Destroy', room_price, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
-
 <br>
-
+<div class="d-flex justify-content-end">
+  Tổng: <%= @room_prices.ids.count %>
+</div>
 <%= link_to 'New Room Price', new_room_price_path %>
