--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,34 +1,39 @@
-<h1>Rooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Beds</th>
-      <th>Status</th>
-      <th>Floor</th>
-      <th>Capacity</th>
-      <th>Price</th>
-      <th>Roomtype</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
+<div class="d-flex justify-content-start">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to "Cấu hình", rooms_path %></li>
+    <li class="breadcrumb-item" aria-current="page"><a>Phòng</a></li>
+  </ol>
+</div>
+<h3>Danh sách phòng  </h3>
+<table class="table card-body">
+  <thead class="thead-dark">
+  <tr>
+    <th scope="col">Tên phòng</th>
+    <th scope="col">Giá</th>
+    <th scope="col">Loại phòng</th>
+    <th scope="col">Tầng</th>
+    <th scope="col">Trạng thái</th>
+    <th scope="col" colspan="3"></th>
+  </tr>
   </thead>
-
   <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.status %></td>
-        <td><%= room.floor %></td>
-        <td><%= room.room_type_id %></td>
-        <td><%= room.description %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @rooms.each do |room| %>
+    <tr>
+      <td><%= room.name %></td>
+      <td><%= RoomPrice.find(RoomType.find(room.room_type_id).id).price %></td>
+      <td><%= RoomType.find(room.room_type_id).name %></td>
+      <td><%= room.floor %></td>
+      <td><%= @status[room.status][:text] %></td>
+      <td><%= link_to 'Show', room %></td>
+      <td><%= link_to 'Edit', edit_room_path(room) %></td>
+      <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
-
+<div class="d-flex justify-content-end">
+  Tổng: <%= @rooms.ids.count %>
+</div>
 <br>
 
 <%= link_to 'New Room', new_room_path %>
