--- a/app/views/reservations/_step3.html.erb
+++ b/app/views/reservations/_step3.html.erb
@@ -1,3 +1,4 @@
+<h5>Bước 3: Thanh toán</h5>
 <%= form.fields_for :payment_attributes, Payment.new do |p| %>
   <div class="row">
   <div class="col-lg-6 row">
