--- a/app/views/reservations/_step1.html.erb
+++ b/app/views/reservations/_step1.html.erb
@@ -20,6 +20,32 @@
   </div>
 </div>
 <div class="row">
+
+  <div class="col-lg-6 row">
+    <div class="row end-row-md">
+      <p class="col-lg-3">Loại giá</p>
+      <div class="col-lg-7 form-group">
+        <select id="price_type" onchange="window.location.href=this.value" class="form-select read-only-white">
+          <% @reservation_type.each do |c| %>
+            <option value=/reservations/new/<%= params[:room_id] || 1  %>?price_type_id=<%= @reservation_type.index(c) + 1 %>>
+              <%= c[:text] %>
+            </option>
+          <% end %>
+        </select>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-6 row">
+    <div class="row row">
+      <p class="col-lg-3">Giá phòng</p>
+      <div class="col-lg-7 form-group">
+        <%= form.label @room_price, class:"form-control", readonly:true, id:"room_price" %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-lg-6 row">
     <div class="row row end-row-md">
       <p class="col-lg-3">Ngày đến</p>
@@ -32,32 +58,6 @@
                             },
                             class: "form-select read-only-white",
                             placeholder: "Chọn ngày đến"%>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-6 row">
-    <div class="row row">
-      <p class="col-lg-3">Giá phòng</p>
-      <div class="col-lg-7 form-group">
-        <%= form.label @room_price, class:"form-control", readonly:true, id:"room_price" %>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-6 row">
-    <div class="row end-row-md">
-      <p class="col-lg-3">Ngày đi</p>
-      <div class="col-lg-7 form-group">
-        <%= form.text_field :leave_date,
-                            data: {
-                              controller: "flatpickr",
-                              flatpickr_date_format: "d-m-Y",
-                              flatpickr_min_date: Time.zone.now
-                            },
-                            class: "form-select read-only-white",
-                            placeholder: "Chọn ngày đi"%>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -81,9 +81,17 @@
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
-      <p class="col-lg-3">Loại đặt phòng</p>
+      <p class="col-lg-3">Ngày đi</p>
       <div class="col-lg-7 form-group">
-        <%= form.select @reservation_type_chosen, options_for_select(@reservation_type_view), {}, class: "form-select read-only-white" %>
+        <%= form.text_field :leave_date,
+                            data: {
+                              controller: "flatpickr",
+                              flatpickr_date_format: "d-m-Y",
+                              flatpickr_min_date: Time.zone.now
+                            },
+                            class: "form-select read-only-white",
+                            placeholder: "Chọn ngày đi"%>
+        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
   </div>
@@ -104,4 +112,12 @@
         var theURL = '/reservations/new/' + theVal;
         window.location.href = theURL
     });
+
+    var price_type_id = window.location.search
+    const urlParams = new URLSearchParams(price_type_id);
+    var price_type_id = urlParams.get('price_type_id')
+    price_type_id = price_type_id ? price_type_id : 2;
+    price_type_id -= 1;
+    var string = 'select#price_type>option:eq(' + price_type_id + ')'
+    $(string).attr('selected', true);
 </script>
